add HealthyEatingTipMapper